--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
     </form>
     <h4 class="js-greetings greetings"></h4>
 
-    <form class="js-toDoForm">
-        <input type="text" placeholder="할 일을 적어주세요.">
+    <form class="js-addTaskForm">
+        <input type="text" class="" placeholder="할일을 적어주세요">
     </form>
 
-    <ul class="js-toDoList">   
-        <!-- <li id="1">내용내용</li>   -->  
-    </ul>
+    <div>        
+        <ul class="js-pendingList">
+          <!-- <li id="1"><span>내용내용 버튼 버튼<span></li>   -->  
+        </ul>
+      </div>
+  
+      <div>        
+        <ul class="js-finishedList">
+          <!-- <li id="1"><span>내용내용 버튼 버튼<span></li>   -->  
+        </ul>
+    </div>
     
     <span class="js-weather"></span>    
 
